Prevent forum overlap (at least in the eyes of netrender)

--- a/ie_style_adfa.css
+++ b/ie_style_adfa.css
@@ -17,8 +17,6 @@ body {
     left: 50px;
     width: 560px;
 }
-#middle {
-}
 #right {
     left: 650px;
     width: 300px;
